2008-05-06  Torsten Rahn  <rahn@kde.org>

    * src/lib/GeoPainter.{cpp,h}:
    * src/plugins/marble/test/MarbleTestPlugin.cpp:

    - More work on GeoPainter: Addition of drawPolygon, drawImage
    - Declaration of GeoPainter::drawAnnotation

2008-05-05  Inge Wallin  <inge@lysator.liu.se>

	Add missing exports needed in KDE version.
	* src/lib/GeoPainter.h (GeoDataPainter): Export this class
	* src/lib/geodata/data/GeoDataPoint.h (GeoDataPoint): Export this class

2008-05-05 Simon Schmeisser
	
* geoshape (directory):  
 * geoshape/CMakeLists.txt:  
 * geoshape/GeoShape.cpp   [License: LGPL (v2+)]:
 * geoshape/GeoShape.h   [License: LGPL (v2+)]:
 * geoshape/GeoTool.cpp   [License: LGPL (v2+)]:
 * geoshape/GeoTool.h   [License: LGPL (v2+)]:
 * geoshape/GeoToolFactory.cpp   [License: LGPL (v2+)]:
 * geoshape/GeoToolFactory.h   [License: LGPL (v2+)]:
 * geoshape/Plugin.cpp   [License: LGPL (v2+)]:
 * geoshape/Plugin.h   [License: LGPL (v2+)]:
 * geoshape/GeoShapeFactory.cpp   [License: LGPL (v2+)]:
 * geoshape/GeoShapeFactory.h   [License: LGPL (v2+)]:
 * geoshape/geoshape.desktop:

- My first commit to Marble :)
   In theory this adds a Koffice flake shape,
   which uses Marble to display a map. In practice,
   there is quite some buildsystem magic missing
   and also some koffice headers need to be exported.
  In the meantime have a look here for a picture:
  http://developer.kde.org/~tackat/simons_marble_flake.png

2008-05-04  Simon Schmeisser <mail_to_wrt@gmx.de>

M      src/lib/PluginManager.h
M      src/lib/MeasureTool.cpp
M      src/lib/MarbleWidget.cpp
M      src/lib/VectorComposer.h
M      src/lib/MarbleWidget.h
M      src/lib/MarbleLayerInterface.h
M      src/lib/VectorMap.cpp
M      src/lib/MarbleMap.cpp
M      src/lib/GeoPainter.cpp
M      src/lib/MarbleModel.h
M      src/lib/PluginManager.cpp
M      src/lib/MarbleModel.cpp
	
2008-05-04  Torsten Rahn  <rahn@kde.org>

    * src/plugins/marble/test/MarbleTestPlugin.{cpp,h}:
